// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeGrid /> Should render all in 2 columns 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            class="bookmark-icon-bookmarked"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone3"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__bookmark"
            >
              <div
                class="guided-answer__bookmark__title"
              >
                <a
                  id="goto-bookmark-button"
                  tabindex="0"
                >
                  Bookmark 1 Title
                </a>
                <button
                  id="toggle-bookmark-button"
                  tabindex="-1"
                >
                  <svg
                    class="bookmark-icon-bookmarked"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone4"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__last-visited"
            >
              <a
                id="last-visited-link"
                tabindex="0"
              >
                Bookmark 1 Title
              </a>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M15 2v1.67l-5 4.759V14H6V8.429l-5-4.76V2h14zM7 8v5h2V8l5-4.76V3H2v.24L7 8z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Quick Filters
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone5"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__quick-filter"
            >
              <button
                tabindex="0"
              >
                <div>
                  Product: 
                  <strong>
                    product 1
                  </strong>
                </div>
                <div>
                  Component: 
                  <strong>
                    component 1
                  </strong>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only Bookmarks 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            class="bookmark-icon-bookmarked"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone0"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__bookmark"
            >
              <div
                class="guided-answer__bookmark__title"
              >
                <a
                  id="goto-bookmark-button"
                  tabindex="0"
                >
                  Bookmark 1 Title
                </a>
                <button
                  id="toggle-bookmark-button"
                  tabindex="-1"
                >
                  <svg
                    class="bookmark-icon-bookmarked"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only Bookmarks, no beta features 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            class="bookmark-icon-bookmarked"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Bookmarks
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone6"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__bookmark"
            >
              <div
                class="guided-answer__bookmark__title"
              >
                <a
                  id="goto-bookmark-button"
                  tabindex="0"
                >
                  Bookmark 1 Title
                </a>
                <button
                  id="toggle-bookmark-button"
                  tabindex="-1"
                >
                  <svg
                    class="bookmark-icon-bookmarked"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.595 6.252L8 1 6.405 6.252H1l4.373 3.4L3.75 15 8 11.695 12.25 15l-1.623-5.348L15 6.252H9.595z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only LastVisited 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone1"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__last-visited"
            >
              <a
                id="last-visited-link"
                tabindex="0"
              >
                Bookmark 1 Title
              </a>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only LastVisited, no beta features 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Last visited
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone7"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__last-visited"
            >
              <a
                id="last-visited-link"
                tabindex="0"
              >
                Bookmark 1 Title
              </a>
              <div
                class="bottom-section"
                id="bottom-section"
              >
                <div
                  class="component-and-product-container"
                  style="margin-top: 0px;"
                >
                  <div
                    class="guided-answer__tree__product"
                    id="product-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Product: 
                    </span>
                    Product 1
                  </div>
                  <div
                    class="guided-answer__tree__component"
                    id="component-container"
                  >
                    <span
                      class="bottom-title"
                    >
                      Component: 
                    </span>
                    Component 1
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeGrid /> Should render only QuickFilters 1`] = `
<div>
  <div
    class="guided-answer__home-grid"
  >
    <div
      class="guided-answer__home-grid__column"
    >
      <div>
        <h3
          class="guided-answer__home-grid__section__title"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M15 2v1.67l-5 4.759V14H6V8.429l-5-4.76V2h14zM7 8v5h2V8l5-4.76V3H2v.24L7 8z"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Quick Filters
          </span>
        </h3>
        <div
          class="ms-FocusZone css-101"
          data-focuszone-id="FocusZone2"
        >
          <ul
            class="guided-answer__home-grid__section__list"
            role="listbox"
          >
            <li
              class="guided-answer__quick-filter"
            >
              <button
                tabindex="0"
              >
                <div>
                  Product: 
                  <strong>
                    product 1
                  </strong>
                </div>
                <div>
                  Component: 
                  <strong>
                    component 1
                  </strong>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
